# homie-backend

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: .env.dist  README.md  docker-compose.yml  start_prod.sh  start_q_cluster.sh
entrypoint/: start.sh
mysql/: create_db.sql
nginx-proxy/: global.conf
nginx-proxy/certs/: README.md  config.cnf  homie-dev.cert  homie-dev.com.key
src/data/migrations/: 0001_initial.py  0002_alter_taxconsultant_city.py  0003_alter_bankaccount_iban.py
src/data/models/: __init__.py  bank_account.py  business.py  category.py  recurring_expenses.py  recurring_transaction.py  tax_consultant.py  transaction.py
src/homie/: manage.py  settings.py  urls.py
src/homie/homie/: asgi.py  settings.py  urls.py  wsgi.py
src/utils/: recurring_transaction.py
src/v1/: urls.py
src/v1/serializers/: __init__.py  bank_account.py  business.py  category.py  cron_job.py  recurring_transaction.py  tax_consultant.py  transaction.py
src/v1/templates/rest_framework/: api.html
src/v1/viewsets/: __init__.py  bank_account.py  business.py  category.py  cron_job.py  recurring_transaction.py  tax_consultant.py  transaction.py
